--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📊</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="AI-powered data analysis platform. Upload CSV/Excel files and chat with your data using natural language." />
+    <meta name="keywords" content="data analysis, AI, chat, CSV, Excel, visualization, Gemini" />
+    <meta name="theme-color" content="#2563eb" />
+    <title>Intelligent Data Room - AI Data Analysis</title>
   </head>
   <body>
     <div id="root"></div>
